package via.easyflow.interactor.usecases.annotation

object CaseScope {
    const val USER = "user"
    const val TASK = "task"
    const val PROJECT = "project"
}